--- a/videoSys/WebContent/views/CSS/login.css
+++ b/videoSys/WebContent/views/CSS/login.css
@@ -1,6 +1,6 @@
 .box {
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 25rem;
@@ -130,6 +130,6 @@ footer {
     color: #d5d5d5;
     margin-top: 50px;
     position: absolute;
-    bottom: 0;
+    bottom: -70px;
     width: 100%;
 }
